# ov5640_video_capture

./: CMakeLists.txt
include/linux/: ipu.h
src/: main.cc  ov7251_capture.cc  ov_video_capture.cc  ov_video_capture.h
